--- a/src/templates/3_UZ_ChildDI_Staff_Registry_en.html
+++ b/src/templates/3_UZ_ChildDI_Staff_Registry_en.html
@@ -91,25 +91,39 @@
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>I4a. Region</div>
             <div>
-                <input type="text" id="i4a" name="i4a" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="i4a" name="i4a" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>I4b. District</div>
             <div>
-                <input type="text" id="i4b" name="i4b" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="i4b" name="i4b" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>I4c. Settlement</div>
             <div>
-                <input type="text" id="i4c" name="i4c" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="i4c" name="i4c" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="-9" class="t_choose">--- choose ---</option>
+                </select>
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>I4d. Type of settlement</div>
             <div>
-                <input type="text" id="i4d" name="i4d" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+                <select id="i4d" name="i4d" class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="10" class="t_settlement_type_10"></option>
+                    <option value="20" class="t_settlement_type_20"></option>
+                    <option value="21" class="t_settlement_type_21"></option>
+                    <option value="22" class="t_settlement_type_22"></option>
+                    <option value="23" class="t_settlement_type_23"></option>
+                    <option value="24" class="t_settlement_type_24"></option>
+                    <option value="31" class="t_settlement_type_31"></option>
+                </select>
             </div>
         </div>
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
@@ -211,7 +225,7 @@
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="j6-1" type="radio" value="0" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="j6-1" class="ms-2 text-sm text-gray-900">0. None</label>
+                    <label for="j6-1" class="ms-2 text-sm text-gray-900">0. No education</label>
                 </div>
                 <div class="flex items-center">
                     <input id="j6-2" type="radio" value="1" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -223,11 +237,23 @@
                 </div>
                 <div class="flex items-center">
                     <input id="j6-4" type="radio" value="3" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="j6-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational education</label>
+                    <label for="j6-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary</label>
                 </div>
                 <div class="flex items-center">
                     <input id="j6-5" type="radio" value="4" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="j6-5" class="ms-2 text-sm text-gray-900">4. Higher education</label>
+                    <label for="j6-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational education</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="j6-6" type="radio" value="5" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="j6-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="j6-7" type="radio" value="6" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="j6-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="j6-9" type="radio" value="9" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="j6-9" class="ms-2 text-sm text-gray-900">9. Unspecified/unknown</label>
                 </div>
             </div>
         </div>
@@ -270,13 +296,8 @@
                 <input type="text" id="e1" name="e1" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
             </div>
         </div>
-        <div class="grid grid-cols-2 gap-4 items-center mt-6">
-            <div>EUID. Anonymized employee unique identifier</div>
-            <div>
-                <input type="text" id="euid" name="euid" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-            </div>
-        </div>
-        <small class="italic uppercase block">AUTOMATICALLY GENERATED </small>
+
+        <input type="hidden" id="euid" name="euid" />
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>E2. Birth date</div>
@@ -304,7 +325,7 @@
             <div class="col-span-1 flex flex-col gap-2">
                 <div class="flex items-center">
                     <input id="e4-1" type="radio" value="0" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="e4-1" class="ms-2 text-sm text-gray-900">0. None</label>
+                    <label for="e4-1" class="ms-2 text-sm text-gray-900">0. No education</label>
                 </div>
                 <div class="flex items-center">
                     <input id="e4-2" type="radio" value="1" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -316,11 +337,23 @@
                 </div>
                 <div class="flex items-center">
                     <input id="e4-4" type="radio" value="3" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="e4-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational education</label>
+                    <label for="e4-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary</label>
                 </div>
                 <div class="flex items-center">
                     <input id="e4-5" type="radio" value="4" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                    <label for="e4-5" class="ms-2 text-sm text-gray-900">4. Higher education</label>
+                    <label for="e4-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational education</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="e4-5" type="radio" value="5" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="e4-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="e4-7" type="radio" value="6" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="e4-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
+                </div>
+                <div class="flex items-center">
+                    <input id="e4-9" type="radio" value="9" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                    <label for="e4-9" class="ms-2 text-sm text-gray-900">9. Unspecified/unknown</label>
                 </div>
             </div>
         </div>
@@ -474,8 +507,8 @@
 
         <div class="grid grid-cols-2 gap-4 items-center mt-6">
             <div>E15. What was the employee&#39;s overall gross monthly salary in March 2024?</div>
-            <div>
-                <input type="text" id="e15" name="e15" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
+            <div class="flex items-center gap-4">
+                <input type="text" id="e15" name="e15" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" /> UZS
             </div>
         </div>
 
